# cyber-irem-chat-gui

./: pyproject.toml  start-persistent.sh  start.sh  watchdog.sh
src/chat_gui/: __init__.py  app.py  backend.py
tests/: test_backend.py
