[project]
name = "chat-gui"
version = "0.1.0"
description = "cyber-irem cat-girl chat GUI"
requires-python = ">=3.12"
dependencies = [
    "chat-lib",
    "gradio>=4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/chat_gui"]

[project.scripts]
chat-gui = "chat_gui.app:main"
